<resources>
    <string name="app_name">To Do</string>
    <string name="to_do_list">To Do List</string>
    <string name="settings">Settings</string>
    <string name="tasks">Tasks</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="english">English</string>
    <string name="light">Light</string>
    <string name="edit_task">Edit Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="save_changes">Save Changes</string>
    <string name="add_new_task">Add New Task</string>
</resources>