<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_task_details">

    <ImageView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@color/blue"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bottom_nav_color"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/edit_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/edit_task"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/title"
                android:textColorHint="@color/blue"
                app:boxBackgroundColor="@color/bottom_nav_color"
                app:layout_constraintTop_toBottomOf="@+id/edit_task">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/description"
                android:textColorHint="@color/blue"
                app:boxBackgroundColor="@color/bottom_nav_color"
                app:layout_constraintTop_toBottomOf="@+id/title_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="5"
                    android:maxLines="5"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/select_date"
                android:textColorHint="@color/blue"
                app:layout_constraintEnd_toStartOf="@id/time_til"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_til">

                <TextView
                    android:id="@+id/date_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_date"
                    android:padding="20dp"
                    android:textColorHint="@color/blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/time_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/select_time"
                android:textColorHint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/date_til"
                app:layout_constraintTop_toBottomOf="@id/description_til">

                <TextView
                    android:id="@+id/time_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_time"
                    android:padding="20dp"
                    android:textColorHint="@color/blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/save_changes"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/time_til" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>